Update and fix function rejuvenate

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"php": ">=7.2",
 		"codeigniter4/framework": "^4",
-		"phpoffice/phpspreadsheet": "^1.14"
+		"phpoffice/phpspreadsheet": "^1.14",
+		"giggsey/libphonenumber-for-php": "^8.12"
 	},
 	"require-dev": {
 		"mikey179/vfsstream": "1.6.*",
